# natlang

./: AST.hs  Main.hs  Parser.hs  README.md  natlang.cabal  natlang.nl  prime.nl
