name:                natlang
version:             0.1.0.0
synopsis:            Toying with a language for natural numbers in Haskell
description:         Experiment both in language implementation and how few features are necessary to do useful things computationally.
license:             MIT
license-file:        LICENSE
author:              Andreas H. From
maintainer:          andro.from@gmail.com
copyright:           Andreas H. From
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable natlang
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       trifecta >= 1.5.1 && < 1.6,
                       free >= 4.9 && < 4.10,
                       mtl >= 2.2.0.1 && < 2.2.1,
                       text >= 1.1.1.3 && < 1.1.2,
                       containers >= 0.5.5.1 && < 0.5.6,
                       semigroups >= 0.15.2 && < 0.16,
                       parsers >= 0.12.1 && < 0.13,
                       transformers >= 0.4.1.0 && < 0.4.2
  -- hs-source-dirs:      
  default-language:    Haskell2010